imclient/marslib/include/WFClient.h



extern "C" PROTOWRAPPER_API void WFCAPI releaseDllString(const char *dllString);


typedef void (WFCAPI *fun_connection_callback)(int connectionStatus);


extern "C" PROTOWRAPPER_API void WFCAPI setAppName(const char *cappName, size_t appName_len);


extern "C" PROTOWRAPPER_API void WFCAPI setAppDataPath(const char *cpath, size_t path_len);


extern "C" PROTOWRAPPER_API void WFCAPI setPackageName(const char *cpackagename, size_t packagename_len);


extern "C" PROTOWRAPPER_API void WFCAPI setDBPath(const char *cpath, size_t path_len);


extern "C" PROTOWRAPPER_API void WFCAPI setConnectionStatusListener(fun_connection_callback callback);


extern "C" PROTOWRAPPER_API const char* WFCAPI getClientId(size_t *retlen);


extern "C" PROTOWRAPPER_API int WFCAPI WFCAPI getConnectionStatus();